# coe322fall2024

./: README.md
homework/: fizzbuzz_discussion.txt  newton_discussion.txt  perfect_discussion.txt
skeletons/: CMakeLists.txt  CMakeLists_eigen.txt  abctuple.cpp  catch_build.sh  cmake_instructions.txt  eps.cpp  if.cpp  linkshared.cpp  matvec.cpp  newton-complex.cpp  newton-lambda.cpp  norm.cpp  pointclass.cpp  pointerstuff.cpp  zeroclasstest.cpp
skeletons/bisect/: zeroclasslib.hpp
skeletons/catch2/: CMakeLists.txt  false.cpp  require.cpp  sqrt.cpp
skeletons/hw5/: CMakeLists.txt  newton.cpp
skeletons/separate/: CMakeLists.txt  CMakeLists.txt~  func.cpp  func.h  main.cpp  main_textual.cpp
